objects/ca2cq_log__c.object
<CustomObject>
    <fields>
        <fullName>Answers_Migrated__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of answers migrated</description>
        <inlineHelpText>Total number of answers migrated</inlineHelpText>
        <label>Answers Migrated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answers_Selected__c</fullName>
        <description>Total number of answers selected to migrate</description>
        <inlineHelpText>Total number of answers selected to migrate</inlineHelpText>
        <label>Answers Selected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Indicates when this current batch execution ended</description>
        <inlineHelpText>Indicates when this current batch execution ended</inlineHelpText>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Errors_on_Answers__c</fullName>
        <description>Number of errors on answers</description>
        <inlineHelpText>Number of errors on answers</inlineHelpText>
        <label>Answers Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Errors_on_Questions__c</fullName>
        <description>Number of errors on questions</description>
        <inlineHelpText>Number of errors on questions</inlineHelpText>
        <label>Questions Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Questions_Migrated__c</fullName>
        <description>Total number of questions migrated</description>
        <inlineHelpText>Total number of questions migrated</inlineHelpText>
        <label>Questions Migrated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Questions_Selected__c</fullName>
        <description>Total number of questions selected to migrate</description>
        <inlineHelpText>Total number of questions selected to migrate</inlineHelpText>
        <label>Questions Selected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Indicates when this current batch execution started</description>
        <inlineHelpText>Indicates when this current batch execution started</inlineHelpText>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Migration Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Questions_Selected__c</columns>
        <columns>Questions_Migrated__c</columns>
        <columns>Errors_on_Questions__c</columns>
        <columns>Answers_Selected__c</columns>
        <columns>Answers_Migrated__c</columns>
        <columns>Errors_on_Answers__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Chatter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Migration Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>